infra2/k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mo-data
              mountPath: /data/db
            - name: zoneinfo
              mountPath: /etc/localtime
              readOnly: true
              subPath: Asia/Bangkok
      volumes:
        - name: mo-data
          persistentVolumeClaim:
            claimName: mo-data-pvc
        - hostPath:
            path: /usr/share/zoneinfo
            type: ""
          name: zoneinfo
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
